--- a/guacamole/src/main/frontend/src/translations/vi.json
+++ b/guacamole/src/main/frontend/src/translations/vi.json
@@ -4,7 +4,7 @@
     
     "APP" : {
 
-        "NAME"    : "Tech42 - Truy cập từ xa",
+        "NAME"    : "Tech42 AG System",
         "VERSION" : "${project.version}",
 
         "ACTION_ACKNOWLEDGE"        : "OK",
